Add Items Activity

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,7 +6,7 @@
     <color name="colorAccent">#66bb6a</color>
     <color name="colorBackground">#fafafa</color>
     <color name="colorTextPrimary">#757575</color>
-    <color name="colorDivider">#E0E0E0</color>
+    <color name="colorDivider">#F0F0F0</color>
 
     <color name="bannerFilter">#60FFFFFF</color>
     <color name="transparentStatusBar">#30000000</color>
