--- a/app/src/main/res/layout/fragment_alerts.xml
+++ b/app/src/main/res/layout/fragment_alerts.xml
@@ -4,4 +4,20 @@
     android:layout_height="match_parent"
     tools:context="com.philippegerbeau.pocketcamping.fragments.AlertsFragment">
 
+    <ListView
+        android:id="@+id/list_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+    </ListView>
+
+    <TextView
+        android:id="@+id/no_alerts"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:text="@string/no_alerts"
+        android:textColor="@color/colorTextPrimary"
+        android:textSize="26sp"
+        android:visibility="invisible"/>
+
 </FrameLayout>
