--- a/app/src/main/res/layout/fragment_friends.xml
+++ b/app/src/main/res/layout/fragment_friends.xml
@@ -1,12 +1,25 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.philippegerbeau.pocketcamping.fragments.FriendsFragment">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    tools:context="com.philippegerbeau.pocketcamping.fragments.FriendsFragment"
+    android:orientation="vertical">
 
-    <TextView
+    <ListView
+        android:id="@+id/list_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+    </ListView>
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/friends_fab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="FRIENDS"/>
+        app:fabSize="normal"
+        android:src="@drawable/add_icon"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentEnd="true"
+        android:layout_margin="32dp"/>
 
-</FrameLayout>
+</RelativeLayout>
