--- a/app/src/main/res/layout/fragment_no_stay.xml
+++ b/app/src/main/res/layout/fragment_no_stay.xml
@@ -25,7 +25,7 @@
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="32dp"
-        android:onClick="stayCreation"/>
+        android:onClick="stayEdit"/>
 
     <ImageView
         android:id="@+id/arrow"
@@ -34,8 +34,8 @@
         android:src="@drawable/arrow_img"
         android:tint="@color/colorTextPrimary"
         android:layout_marginBottom="20dp"
-        android:layout_above="@+id/fab"
-        android:layout_alignEnd="@+id/fab"
+        android:layout_above="@+id/creation_fab"
+        android:layout_alignEnd="@+id/creation_fab"
         tools:ignore="ContentDescription"/>
 
     <LinearLayout
