--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -82,8 +82,7 @@
                 android:textSize="14sp"
                 android:textColor="@color/colorTextPrimary"
                 android:layout_below="@id/username"
-                android:layout_centerHorizontal="true"
-                android:layout_marginBottom="4dp"/>
+                android:layout_centerHorizontal="true"/>
 
             <android.support.design.widget.TabLayout
                 android:id="@+id/tab_layout"
