Add Friends Fragment

--- a/app/src/main/res/layout/fragment_friends.xml
+++ b/app/src/main/res/layout/fragment_friends.xml
@@ -16,6 +16,7 @@
         android:visibility="gone">
 
         <TextView
+            android:id="@+id/invite_text"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textColor="@color/colorTextPrimary"
