--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -75,12 +75,11 @@
                 android:layout_marginTop="4dp"/>
 
             <TextView
-                android:id="@+id/status"
+                android:id="@+id/email"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/no_plan"
                 android:textSize="14sp"
-                android:textColor="@color/colorTextPrimary"
+                android:textColor="@color/colorTextSecondary"
                 android:layout_below="@id/username"
                 android:layout_centerHorizontal="true"/>
 
@@ -88,7 +87,7 @@
                 android:id="@+id/tab_layout"
                 android:layout_width="match_parent"
                 android:layout_height="56dp"
-                android:layout_below="@+id/status">
+                android:layout_below="@+id/email">
             </android.support.design.widget.TabLayout>
 
         </RelativeLayout>
