--- a/app/src/main/res/layout/item_parent.xml
+++ b/app/src/main/res/layout/item_parent.xml
@@ -33,9 +33,9 @@
         android:src="@drawable/add_icon"
         android:tint="@color/colorPrimaryDark"
         android:background="?attr/selectableItemBackgroundBorderless"
-        android:focusable="false"
-        android:focusableInTouchMode="false"
-        android:clickable="true"/>
+        android:focusable="true"
+        android:clickable="true"
+        android:contentDescription="@string/add"/>
 
 
 </LinearLayout>
