--- a/app/src/main/res/layout/fragment_stay.xml
+++ b/app/src/main/res/layout/fragment_stay.xml
@@ -34,20 +34,25 @@
                 android:textSize="@dimen/text_header"/>
 
             <TextView
-                android:id="@+id/stay_duration"
+                android:id="@+id/stay_arrival"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="@dimen/text_sub_header"/>
+                android:textSize="16sp"/>
+
+            <TextView
+                android:id="@+id/stay_departure"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="16sp"/>
 
             <TextView
                 android:id="@+id/stay_spot"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="@dimen/text_app_bar"
-                android:layout_marginTop="16dp"/>
+                android:textSize="22sp"
+                android:layout_marginTop="28dp"/>
 
         </LinearLayout>
-
 
     </FrameLayout>
 
@@ -66,6 +71,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:clickable="true"
+            android:focusable="true"
             android:background="?attr/selectableItemBackgroundBorderless"
             android:onClick="toItems">
 
@@ -87,12 +93,13 @@
                 android:src="@drawable/items_icon"
                 android:tint="@color/colorPrimary"
                 android:layout_centerHorizontal="true"
-                android:layout_marginTop="52dp"/>
+                android:layout_marginTop="52dp"
+                android:contentDescription="@string/items"/>
 
             <TextView
+                android:id="@+id/items_status"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="3 / 8"
                 android:textSize="18sp"
                 android:textColor="@color/colorPrimary"
                 android:layout_centerHorizontal="true"
@@ -127,12 +134,13 @@
                 android:src="@drawable/meals_icon"
                 android:tint="@color/colorPrimary"
                 android:layout_centerHorizontal="true"
-                android:layout_marginTop="52dp"/>
+                android:layout_marginTop="52dp"
+                android:contentDescription="@string/meals"/>
 
             <TextView
+                android:id="@+id/meals_status"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="3 / 8"
                 android:textSize="18sp"
                 android:textColor="@color/colorPrimary"
                 android:layout_centerHorizontal="true"
@@ -155,11 +163,13 @@
         android:layout_height="60dp"
         android:layout_below="@id/anchor">
 
-        <TextView
+        <Button
+            android:id="@+id/manage"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Temps restant: 4 jours"
-            android:textSize="18sp"
+            style="?attr/borderlessButtonStyle"
+            android:text="@string/manage"
+            android:textColor="@color/colorPrimaryDark"
             android:layout_gravity="center"/>
 
     </FrameLayout>
